[metadata]
name = c51_corr_fitter
version = 0.0.1
author = @walkloud, @ckoerber
author_email = walkloud@lbl.gov
description = A lattice QCD correlation function analysis library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/callat-qcd/c51_corr_fitter
project_urls =
    Bug Tracker = https://github.com/callat-qcd/c51_corr_fitter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages=find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    matplotlib
    h5py
    tables
    gvar @ git+https://github.com/ckoerber/gvar@pyproject-install
    lsqfit
    lsqfitgui @ git+ssh://git@github.com/ckoerber/lsqfit-gui.git@master

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fit_twopt = fitter.fit_twopt:main
